Fix for bug 48200. We were incorrectly setting mDocumentURI to the OriginalURI which completely broke redirects (which are conveyed thru URI and not OriginalURI) r=hyatt